[package]
name = "tokio-evacuate"
description = "A future for coordinating controlled shutdown of participants."
version = "1.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
license = "MIT"

[dependencies]
futures = "^0.1"
tokio-timer = "^0.2"

[dev-dependencies]
tokio-executor = "^0.1"
